--- a/Неновый но новый файл.md
+++ b/Неновый но новый файл.md
@@ -15,3 +15,7 @@
 Добавим маленько магии и текста что-бы создать ошибку при сиянии
 
 и его копию
+
+![Нян кэт ушёл](PYh.gif)
+
+а тут вообще добавили картинку
